tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr28651.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr28651.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg2: u32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: u32i):
        %13 = alloca u32i, "u", align 4
        %14 = alloca s32i, "__retval", align 4
        store %arg2, %13
        %15 = load %13 : u32i, align 4
        %16 = const 4 : u32i
        %17 = add %15, %16 : u32i
        %18 = cast(integral) %17 : s32i
        %19 = load %13 : u32i, align 4
        %20 = cast(integral) %19 : s32i
        %21 = cmp lt %18, %20 : bool
        %22 = cast(bool_to_int) %21 : s32i
        store %22, %14
        %23 = load %14 : s32i
        return %23
}
fn abort() -> void [external, c, nothrow];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca u32i, "u", align 4
        store %arg0, %0
        store %arg1, %1
        %4 = const 0 : s32i
        store %4, %2
        %5 = const 2147483647 : u32i
        store %5, %3, align 4
        scope {
            %8 = load %3 : u32i, align 4
            %9 = call @foo(%8) : s32i [all]
            %10 = const 0 : s32i
            %11 = cmp eq %9, %10 : bool
            if %11 {
                %12 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %6 = const 0 : s32i
        store %6, %2
        %7 = load %2 : s32i
        return %7
}
