tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr28778.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr28778.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn aglChoosePixelFormat(%arg1: s64i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s64i*):
        %17 = alloca s64i*, "a", align 8
        %18 = alloca s32i*, "b", align 8
        store %arg1, %17
        %19 = load %17 : s64i*, align 8
        %20 = cast(bitcast) %19 : s32i*
        store %20, %18, align 8
        scope {
            %21 = const 3 : s64i
            %22 = load %18 : s32i*, align 8
            %23 = ptr_stride %22, %21 : s32i*
            %24 = load %23 : s32i, align 4
            %25 = const 42 : s32i
            %26 = cmp ne %24, %25 : bool
            if %26 {
                %27 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn find(%arg0: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %5 = alloca s32i*, "alistp", align 8
        %6 = alloca s32i*, "blist", align 8
        %7 = alloca s32i[32], "list", align 16
        store %arg0, %5
        scope {
            %10 = load %5 : s32i*, align 8
            %11 = cast(ptr_to_bool) %10 : bool
            if %11 {
                %16 = load %5 : s32i*, align 8
                store %16, %6, align 8
                yield
            } else {
                %12 = const 42 : s32i
                %13 = const 3 : s64i
                %14 = get_element %7[%13] : s32i*
                store %12, %14, align 4
                %15 = cast(array_to_ptrdecay) %7 : s32i*
                store %15, %6, align 8
                yield
            }
            yield
        }
        %8 = load %6 : s32i*, align 8
        %9 = cast(bitcast) %8 : s64i*
        call @aglChoosePixelFormat(%9) [all]
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const #cir.ptr<null> : s32i*
    call @find(%2) [all]
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
