tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr29006.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr29006.c" (c, x86_64-unknown-linux-gnu)
global __const.main.s : rec_s = {1, 18446744073709551615} [cir_private, default, dso_local, constant]

fn foo(%arg0: rec_s*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_s*):
        %10 = alloca rec_s*, "s", align 8
        store %arg0, %10
        %11 = const 0 : u64i
        %12 = load %10 : rec_s*, align 8
        %13 = get_member %12[1] "x" : u64i*
        store %11, %13, align 1
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_s, "s", align 1
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.s : rec_s*
    copy %1, %3
    call @foo(%1) [all]
    %4 = get_member %1[1] "x" : u64i*
    %5 = load %4 : u64i, align 1
    %6 = const 0 : u64i
    %7 = cmp ne %5, %6 : bool
    %8 = cast(bool_to_int) %7 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
