tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr29695_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr29695-1.c" (c, x86_64-unknown-linux-gnu)
fn f1() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %126 = alloca s32i, "__retval", align 4
    %127 = alloca s32i, "a", align 4
    %128 = const 128 : s32i
    store %128, %127, align 4
    %129 = load %127 : s32i, align 4
    %130 = const 128 : s32i
    %131 = and %129, %130 : s32i
    %132 = cast(int_to_bool) %131 : bool
    %133 = const 128 : s32i
    %134 = const 0 : s32i
    %135 = select %132, %133, %134 : s32i
    store %135, %126
    %136 = load %126 : s32i
    return %136
}
fn f2() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %114 = alloca s32i, "__retval", align 4
    %115 = alloca u8i, "a", align 1
    %116 = const 128 : u8i
    store %116, %115, align 1
    %117 = load %115 : u8i, align 1
    %118 = cast(integral) %117 : s32i
    %119 = const 128 : s32i
    %120 = and %118, %119 : s32i
    %121 = cast(int_to_bool) %120 : bool
    %122 = const 128 : s32i
    %123 = const 0 : s32i
    %124 = select %121, %122, %123 : s32i
    store %124, %114
    %125 = load %114 : s32i
    return %125
}
fn f3() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %102 = alloca s32i, "__retval", align 4
    %103 = alloca u8i, "a", align 1
    %104 = const 128 : u8i
    store %104, %103, align 1
    %105 = load %103 : u8i, align 1
    %106 = cast(integral) %105 : s32i
    %107 = const 128 : s32i
    %108 = and %106, %107 : s32i
    %109 = cast(int_to_bool) %108 : bool
    %110 = const 896 : s32i
    %111 = const 0 : s32i
    %112 = select %109, %110, %111 : s32i
    store %112, %102
    %113 = load %102 : s32i
    return %113
}
fn f4() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %90 = alloca s32i, "__retval", align 4
    %91 = alloca u8i, "a", align 1
    %92 = const 128 : u8i
    store %92, %91, align 1
    %93 = load %91 : u8i, align 1
    %94 = cast(integral) %93 : s32i
    %95 = const 128 : s32i
    %96 = and %94, %95 : s32i
    %97 = cast(int_to_bool) %96 : bool
    %98 = const -128 : s32i
    %99 = const 0 : s32i
    %100 = select %97, %98, %99 : s32i
    store %100, %90
    %101 = load %90 : s32i
    return %101
}
fn f5() -> s64i [external, c, no_inline, dso_local, nothrow] {
    %79 = alloca s64i, "__retval", align 8
    %80 = alloca s64i, "a", align 8
    %81 = const 2147483648 : s64i
    store %81, %80, align 8
    %82 = load %80 : s64i, align 8
    %83 = const 2147483648 : s64i
    %84 = and %82, %83 : s64i
    %85 = cast(int_to_bool) %84 : bool
    %86 = const 2147483648 : s64i
    %87 = const 0 : s64i
    %88 = select %85, %86, %87 : s64i
    store %88, %79
    %89 = load %79 : s64i
    return %89
}
fn f6() -> s64i [external, c, no_inline, dso_local, nothrow] {
    %68 = alloca s64i, "__retval", align 8
    %69 = alloca u32i, "a", align 4
    %70 = const 2147483648 : u32i
    store %70, %69, align 4
    %71 = load %69 : u32i, align 4
    %72 = const 2147483648 : u32i
    %73 = and %71, %72 : u32i
    %74 = cast(int_to_bool) %73 : bool
    %75 = const 2147483648 : s64i
    %76 = const 0 : s64i
    %77 = select %74, %75, %76 : s64i
    store %77, %68
    %78 = load %68 : s64i
    return %78
}
fn f7() -> s64i [external, c, no_inline, dso_local, nothrow] {
    %57 = alloca s64i, "__retval", align 8
    %58 = alloca u32i, "a", align 4
    %59 = const 2147483648 : u32i
    store %59, %58, align 4
    %60 = load %58 : u32i, align 4
    %61 = const 2147483648 : u32i
    %62 = and %60, %61 : u32i
    %63 = cast(int_to_bool) %62 : bool
    %64 = const 15032385536 : s64i
    %65 = const 0 : s64i
    %66 = select %63, %64, %65 : s64i
    store %66, %57
    %67 = load %57 : s64i
    return %67
}
fn f8() -> s64i [external, c, no_inline, dso_local, nothrow] {
    %46 = alloca s64i, "__retval", align 8
    %47 = alloca u32i, "a", align 4
    %48 = const 2147483648 : u32i
    store %48, %47, align 4
    %49 = load %47 : u32i, align 4
    %50 = const 2147483648 : u32i
    %51 = and %49, %50 : u32i
    %52 = cast(int_to_bool) %51 : bool
    %53 = const -2147483648 : s64i
    %54 = const 0 : s64i
    %55 = select %52, %53, %54 : s64i
    store %55, %46
    %56 = load %46 : s64i
    return %56
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %36 = const -128 : s32i
        %37 = const -128 : s32i
        %38 = cmp ne %36, %37 : bool
        %39 = ternary %38 ? { : bool
            %45 = const #true : bool
            yield %45
        } : {
            %42 = const -2147483648 : s64i
            %43 = const -2147483648 : s64i
            %44 = cmp ne %42, %43 : bool
            yield %44
        }
        if %39 {
            %40 = const 0 : s32i
            store %40, %0
            %41 = load %0 : s32i
            return %41
        }
        yield
    }
    scope {
        %32 = call @f1() : s32i [all]
        %33 = const 128 : s32i
        %34 = cmp ne %32, %33 : bool
        if %34 {
            %35 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %28 = call @f2() : s32i [all]
        %29 = const 128 : s32i
        %30 = cmp ne %28, %29 : bool
        if %30 {
            %31 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %24 = call @f3() : s32i [all]
        %25 = const 896 : s32i
        %26 = cmp ne %24, %25 : bool
        if %26 {
            %27 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %20 = call @f4() : s32i [all]
        %21 = const -128 : s32i
        %22 = cmp ne %20, %21 : bool
        if %22 {
            %23 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %16 = call @f5() : s64i [all]
        %17 = const 2147483648 : s64i
        %18 = cmp ne %16, %17 : bool
        if %18 {
            %19 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %12 = call @f6() : s64i [all]
        %13 = const 2147483648 : s64i
        %14 = cmp ne %12, %13 : bool
        if %14 {
            %15 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %8 = call @f7() : s64i [all]
        %9 = const 15032385536 : s64i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %4 = call @f8() : s64i [all]
        %5 = const -2147483648 : s64i
        %6 = cmp ne %4, %5 : bool
        if %6 {
            %7 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
