tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr29695_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr29695-2.c" (c, x86_64-unknown-linux-gnu)
global a : s32i = 128 [external, default, align 4, dso_local]
global b : u8i = 128 [external, default, align 1, dso_local]
global c : s64i = 2147483648 [external, default, align 8, dso_local]
global d : u32i = 2147483648 [external, default, align 4, dso_local]

fn f1() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %119 = alloca s32i, "__retval", align 4
    %120 = get_global @a : s32i*
    %121 = load %120 : s32i, align 4
    %122 = const 128 : s32i
    %123 = and %121, %122 : s32i
    %124 = cast(int_to_bool) %123 : bool
    %125 = const 128 : s32i
    %126 = const 0 : s32i
    %127 = select %124, %125, %126 : s32i
    store %127, %119
    %128 = load %119 : s32i
    return %128
}
fn f2() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %108 = alloca s32i, "__retval", align 4
    %109 = get_global @b : u8i*
    %110 = load %109 : u8i, align 1
    %111 = cast(integral) %110 : s32i
    %112 = const 128 : s32i
    %113 = and %111, %112 : s32i
    %114 = cast(int_to_bool) %113 : bool
    %115 = const 128 : s32i
    %116 = const 0 : s32i
    %117 = select %114, %115, %116 : s32i
    store %117, %108
    %118 = load %108 : s32i
    return %118
}
fn f3() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %97 = alloca s32i, "__retval", align 4
    %98 = get_global @b : u8i*
    %99 = load %98 : u8i, align 1
    %100 = cast(integral) %99 : s32i
    %101 = const 128 : s32i
    %102 = and %100, %101 : s32i
    %103 = cast(int_to_bool) %102 : bool
    %104 = const 896 : s32i
    %105 = const 0 : s32i
    %106 = select %103, %104, %105 : s32i
    store %106, %97
    %107 = load %97 : s32i
    return %107
}
fn f4() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %86 = alloca s32i, "__retval", align 4
    %87 = get_global @b : u8i*
    %88 = load %87 : u8i, align 1
    %89 = cast(integral) %88 : s32i
    %90 = const 128 : s32i
    %91 = and %89, %90 : s32i
    %92 = cast(int_to_bool) %91 : bool
    %93 = const -128 : s32i
    %94 = const 0 : s32i
    %95 = select %92, %93, %94 : s32i
    store %95, %86
    %96 = load %86 : s32i
    return %96
}
fn f5() -> s64i [external, c, no_inline, dso_local, nothrow] {
    %76 = alloca s64i, "__retval", align 8
    %77 = get_global @c : s64i*
    %78 = load %77 : s64i, align 8
    %79 = const 2147483648 : s64i
    %80 = and %78, %79 : s64i
    %81 = cast(int_to_bool) %80 : bool
    %82 = const 2147483648 : s64i
    %83 = const 0 : s64i
    %84 = select %81, %82, %83 : s64i
    store %84, %76
    %85 = load %76 : s64i
    return %85
}
fn f6() -> s64i [external, c, no_inline, dso_local, nothrow] {
    %66 = alloca s64i, "__retval", align 8
    %67 = get_global @d : u32i*
    %68 = load %67 : u32i, align 4
    %69 = const 2147483648 : u32i
    %70 = and %68, %69 : u32i
    %71 = cast(int_to_bool) %70 : bool
    %72 = const 2147483648 : s64i
    %73 = const 0 : s64i
    %74 = select %71, %72, %73 : s64i
    store %74, %66
    %75 = load %66 : s64i
    return %75
}
fn f7() -> s64i [external, c, no_inline, dso_local, nothrow] {
    %56 = alloca s64i, "__retval", align 8
    %57 = get_global @d : u32i*
    %58 = load %57 : u32i, align 4
    %59 = const 2147483648 : u32i
    %60 = and %58, %59 : u32i
    %61 = cast(int_to_bool) %60 : bool
    %62 = const 15032385536 : s64i
    %63 = const 0 : s64i
    %64 = select %61, %62, %63 : s64i
    store %64, %56
    %65 = load %56 : s64i
    return %65
}
fn f8() -> s64i [external, c, no_inline, dso_local, nothrow] {
    %46 = alloca s64i, "__retval", align 8
    %47 = get_global @d : u32i*
    %48 = load %47 : u32i, align 4
    %49 = const 2147483648 : u32i
    %50 = and %48, %49 : u32i
    %51 = cast(int_to_bool) %50 : bool
    %52 = const -2147483648 : s64i
    %53 = const 0 : s64i
    %54 = select %51, %52, %53 : s64i
    store %54, %46
    %55 = load %46 : s64i
    return %55
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %36 = const -128 : s32i
        %37 = const -128 : s32i
        %38 = cmp ne %36, %37 : bool
        %39 = ternary %38 ? { : bool
            %45 = const #true : bool
            yield %45
        } : {
            %42 = const -2147483648 : s64i
            %43 = const -2147483648 : s64i
            %44 = cmp ne %42, %43 : bool
            yield %44
        }
        if %39 {
            %40 = const 0 : s32i
            store %40, %0
            %41 = load %0 : s32i
            return %41
        }
        yield
    }
    scope {
        %32 = call @f1() : s32i [all]
        %33 = const 128 : s32i
        %34 = cmp ne %32, %33 : bool
        if %34 {
            %35 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %28 = call @f2() : s32i [all]
        %29 = const 128 : s32i
        %30 = cmp ne %28, %29 : bool
        if %30 {
            %31 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %24 = call @f3() : s32i [all]
        %25 = const 896 : s32i
        %26 = cmp ne %24, %25 : bool
        if %26 {
            %27 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %20 = call @f4() : s32i [all]
        %21 = const -128 : s32i
        %22 = cmp ne %20, %21 : bool
        if %22 {
            %23 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %16 = call @f5() : s64i [all]
        %17 = const 2147483648 : s64i
        %18 = cmp ne %16, %17 : bool
        if %18 {
            %19 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %12 = call @f6() : s64i [all]
        %13 = const 2147483648 : s64i
        %14 = cmp ne %12, %13 : bool
        if %14 {
            %15 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %8 = call @f7() : s64i [all]
        %9 = const 15032385536 : s64i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %4 = call @f8() : s64i [all]
        %5 = const -2147483648 : s64i
        %6 = cmp ne %4, %5 : bool
        if %6 {
            %7 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
