tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr29797_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr29797-1.c" (c, x86_64-unknown-linux-gnu)
fn bar() -> u32i [external, c, no_inline, dso_local, nothrow] {
    %20 = alloca u32i, "__retval", align 4
    %21 = const 32768 : u32i
    store %21, %20
    %22 = load %20 : u32i
    return %22
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u32i, "nStyle", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = call @bar() : u32i [all]
    store %3, %1, align 4
    scope {
        %13 = load %1 : u32i, align 4
        %14 = const 32768 : u32i
        %15 = and %13, %14 : u32i
        %16 = cast(int_to_bool) %15 : bool
        if %16 {
            %17 = const 65536 : u32i
            %18 = load %1 : u32i, align 4
            %19 = or %18, %17 : u32i
            store %19, %1, align 4
            yield
        }
        yield
    }
    scope {
        %6 = load %1 : u32i, align 4
        %7 = const 32768 : s32i
        %8 = const 65536 : s32i
        %9 = or %7, %8 : s32i
        %10 = cast(integral) %9 : u32i
        %11 = cmp ne %6, %10 : bool
        if %11 {
            %12 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
