tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr30185.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr30185.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s8i, %arg1: s64i, %arg2: s8i, %arg3: s64i) -> rec_anon_struct [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i, %arg1: s64i, %arg2: s8i, %arg3: s64i):
        %62 = alloca rec_S, "coerce", align 8
        %63 = alloca rec_anon_struct, "coerce", align 8
        %64 = alloca rec_anon_struct, "coerce", align 8
        %65 = get_member %64[0] "" : s8i*
        store %arg2, %65
        %66 = get_member %64[1] "" : s64i*
        store %arg3, %66
        %67 = load %64 : rec_anon_struct
        store %67, %63
        %68 = cast(bitcast) %63 : rec_S*
        %69 = load %68 : rec_S
        %70 = alloca rec_anon_struct, "coerce", align 8
        %71 = alloca rec_anon_struct, "coerce", align 8
        %72 = get_member %71[0] "" : s8i*
        store %arg0, %72
        %73 = get_member %71[1] "" : s64i*
        store %arg1, %73
        %74 = load %71 : rec_anon_struct
        store %74, %70
        %75 = cast(bitcast) %70 : rec_S*
        %76 = load %75 : rec_S
        %77 = alloca rec_S, "x", align 8
        %78 = alloca rec_S, "y", align 8
        %79 = alloca rec_S, "__retval", align 8
        store %76, %77
        store %69, %78
        %80 = get_member %77[1] "b" : s64i*
        %81 = load %80 : s64i, align 8
        %82 = get_member %78[1] "b" : s64i*
        %83 = load %82 : s64i, align 8
        %84 = div %81, %83 : s64i
        %85 = get_member %79[1] "b" : s64i*
        store %84, %85, align 8
        %86 = load %79 : rec_S
        store %86, %62
        %87 = cast(bitcast) %62 : rec_anon_struct*
        %88 = load %87 : rec_anon_struct
        return %88
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_anon_struct, "coerce", align 8
    %1 = alloca rec_S, "coerce", align 8
    %2 = alloca rec_S, "coerce", align 8
    %3 = alloca rec_anon_struct, "coerce", align 8
    %4 = alloca rec_S, "coerce", align 8
    %5 = alloca rec_S, "coerce", align 8
    %6 = alloca s32i, "__retval", align 4
    %7 = alloca rec_S, "a", align 8
    %8 = alloca rec_S, "b", align 8
    %9 = const 0 : s32i
    store %9, %6
    %10 = const 32 : s64i
    %11 = get_member %7[1] "b" : s64i*
    store %10, %11, align 8
    %12 = const 4 : s64i
    %13 = get_member %8[1] "b" : s64i*
    store %12, %13, align 8
    scope {
        %41 = alloca rec_S, "ref.tmp0", align 8
        %42 = load %7 : rec_S, align 8
        %43 = load %8 : rec_S, align 8
        store %42, %5
        %44 = cast(bitcast) %5 : rec_anon_struct*
        %45 = get_member %44[0] "" : s8i*
        %46 = load %45 : s8i
        %47 = get_member %44[1] "" : s64i*
        %48 = load %47 : s64i
        store %43, %4
        %49 = cast(bitcast) %4 : rec_anon_struct*
        %50 = get_member %49[0] "" : s8i*
        %51 = load %50 : s8i
        %52 = get_member %49[1] "" : s64i*
        %53 = load %52 : s64i
        %54 = call @foo(%46, %48, %51, %53) : rec_anon_struct [all]
        store %54, %3
        %55 = cast(bitcast) %3 : rec_S*
        %56 = load %55 : rec_S
        store %56, %41, align 8
        %57 = get_member %41[1] "b" : s64i*
        %58 = load %57 : s64i, align 8
        %59 = const 8 : s64i
        %60 = cmp ne %58, %59 : bool
        if %60 {
            %61 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %14 = const -8 : s64i
    %15 = get_member %7[1] "b" : s64i*
    store %14, %15, align 8
    %16 = const -2 : s64i
    %17 = get_member %8[1] "b" : s64i*
    store %16, %17, align 8
    scope {
        %20 = alloca rec_S, "ref.tmp1", align 8
        %21 = load %7 : rec_S, align 8
        %22 = load %8 : rec_S, align 8
        store %21, %2
        %23 = cast(bitcast) %2 : rec_anon_struct*
        %24 = get_member %23[0] "" : s8i*
        %25 = load %24 : s8i
        %26 = get_member %23[1] "" : s64i*
        %27 = load %26 : s64i
        store %22, %1
        %28 = cast(bitcast) %1 : rec_anon_struct*
        %29 = get_member %28[0] "" : s8i*
        %30 = load %29 : s8i
        %31 = get_member %28[1] "" : s64i*
        %32 = load %31 : s64i
        %33 = call @foo(%25, %27, %30, %32) : rec_anon_struct [all]
        store %33, %0
        %34 = cast(bitcast) %0 : rec_S*
        %35 = load %34 : rec_S
        store %35, %20, align 8
        %36 = get_member %20[1] "b" : s64i*
        %37 = load %36 : s64i, align 8
        %38 = const 4 : s64i
        %39 = cmp ne %37, %38 : bool
        if %39 {
            %40 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %18 = const 0 : s32i
    store %18, %6
    %19 = load %6 : s32i
    return %19
}
