tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr30778.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr30778.c" (c, x86_64-unknown-linux-gnu)
global reg_stat : rec_reg_stat* = #cir.ptr<null> [internal, default, align 8, dso_local]

fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn init_reg_last() -> void [external, c, no_inline, dso_local, nothrow] {
    %13 = get_global @memset : ((void*, s32i, u64i) -> void*)*
    %14 = get_global @reg_stat : rec_reg_stat**
    %15 = load %14 : rec_reg_stat*, align 8
    %16 = cast(bitcast) %15 : void*
    %17 = const 0 : s32i
    %18 = const 31 : u64i
    %19 = call @memset(%16, %17, %18) : void* [all]
    return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_reg_stat, "r", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @reg_stat : rec_reg_stat**
    store %1, %3, align 8
    %4 = const -1 : s64i
    %5 = get_member %1[8] "nonzero_bits" : s64i*
    store %4, %5, align 8
    call @init_reg_last() [all]
    scope {
        %8 = get_member %1[8] "nonzero_bits" : s64i*
        %9 = load %8 : s64i, align 8
        %10 = const -1 : s64i
        %11 = cmp ne %9, %10 : bool
        if %11 {
            %12 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
